--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>{{htmlWebpackPlugin.options.title}}</title>
+  <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class='hello'>Hello, world!</div>
+  
+  <div class="container">
+      <h1 id="headerInfo"></h1>
+
+      <div id="results">
+        {{> "friends.hbs"}}
+      </div>
+  </div>
+
 </body>
 </html>
