--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>{{htmlWebpackPlugin.options.title}}</title>
-  <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
+  <script src='http://vk.com/js/api/openapi.js' type='text/javascript'></script>
 </head>
 <body>
-  <div class='hello'>Hello, world!</div>
-  
   <div class="container">
-      <h1 id="headerInfo"></h1>
+      <div id="headerInfo">
 
+      </div>
       <div id="results">
-        {{> "friends.hbs"}}
       </div>
   </div>
 
