--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,13 +6,8 @@
   <script src='http://vk.com/js/api/openapi.js' type='text/javascript'></script>
 </head>
 <body>
-  <div class="container">
-      <div id="headerInfo">
-
-      </div>
-      <div id="results">
-      </div>
-  </div>
-
+    <div class="wrapper">
+        {{>"./index-content.hbs"}}
+    </div>
 </body>
 </html>
