--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,149 @@
-body {
-    font: 16px Helvetica;
+* {
+    box-sizing: border-box;
 }
 
-.friends {
+body {
+    margin: 0;
+    font-size: 16px;
+    font-family: Verdana, sans-serif;
+}
+
+.wrapper {
+    min-height: 100vh;
+    background-color: #999999;
+    padding-top: 130px;
+}
+
+.container {
+    width: 620px;
+    height: 608px;
+    margin: 0 auto;
+    border-radius: 15px;
+}
+
+.header {
+    background-color: #ff8663;
+    color: #ffe3dd;
+    border-radius: 10px 10px 0 0;
+}
+
+.header_title {
+    padding: 15px;
+    font-weight: bold;
+    color: #fff;
+}
+
+#search {
+    background-color: #f0f0f0;
     display: flex;
-    flex-wrap: wrap;
+}
+
+.searching {
+    width: 50%;
+    padding: 10px;
+}
+
+#search input {
+    padding: 8px;
+    padding-left: 28px;
+    color: #9f9f9f;
+    border-radius: 15px;
+    width: 100%;
+    border: none;
+    background-image: url(../icons/search.png);
+    background-repeat: no-repeat;
+    background-position: 6px;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    margin-bottom: 15px;
+}
+
+.logo_img {
+    width: 100px;
+    height: 35px;
+    background-image: url(../icons/logo.png);
+    background-repeat: no-repeat;
+}
+
+.lists {
+    background-color: #fff;
+    height: 400px;
+    display: flex;
+}
+
+.left,
+.right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+#lists-left,
+#lists-right {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    overflow: auto;
+}
+
+.left {
+    border-right: 1px solid #f0f0f0;
+}
+
+.text,
+.friend_text {
+    color: #4f4f4f;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 13px 0 6px 8px;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.friend_img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.friend_text {
+    border-bottom: none;
 }
 
 .friend {
-    width: 100px;
-    margin: 0 40px 40px 0;
-    text-align: center;
+    display: flex;
+    padding: 7px;
+    border-bottom: 1px solid #f0f0f0;
+    position: relative;
 }
 
-.friend img {
-    border-radius: 50%;
+.friend:hover {
+    background: #f0f0f0;
+}
+
+.friend_plus {
+    height: 16px;
+    position: absolute;
+    right: 6px;
+    top: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: flex-end;
+    background: #f0f0f0;
+    border-radius: 0 0 10px 10px;
+    padding: 8px;
+}
+
+#save {
+    background: #ff8663;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 8px 14px;
 }
