События между елементами системы.

--- a/views/index-content.hbs
+++ b/views/index-content.hbs
@@ -21,7 +21,7 @@
             <div class="left">
                 <div class="text">Ваши друзья</div>
                 <div id="lists-left"> 
-                    {{> "friends.hbs"}}
+                    <!-- левый список -->
                 </div>
             </div>
             <div class="right">
