Каркас для добавления - удаления элементов

--- a/views/selected-friends.hbs
+++ b/views/selected-friends.hbs
@@ -4,7 +4,7 @@
         <img class="friend_img" src="{{photo_100}}"/>
         <div class="friend_text">{{first_name}} {{last_name}}</div>
         <div class="friend_plus">
-            <img src="src/icons/x.png" alt="x">
+            <img src="src/icons/x.png" alt="x" name={{id}}>
         </div>
     </div>
     {{/each}}
