--- a/views/friends.hbs
+++ b/views/friends.hbs
@@ -4,7 +4,7 @@
         <img class="friend_img" src="{{photo_100}}"/>
         <div class="friend_text">{{first_name}} {{last_name}}</div>
         <div class="friend_plus">
-            <img src="src/icons/plus.png" alt="plus">
+            <img src="src/icons/plus.png" alt="plus" name={{id}}>
         </div>
     </div>
     {{/each}}
