--- a/views/index-content.hbs
+++ b/views/index-content.hbs
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="right">
-                <div class="text">Друзья в списке</spa>
+                <div class="text">Друзья в списке</div>
                 <div id="lists-right">
                     <!-- правый список -->
                 </div>    
