--- a/views/index-content.hbs
+++ b/views/index-content.hbs
@@ -33,6 +33,7 @@
         </section>
         <footer class="footer">
             <button id="save">Сохранить</button>
+            <button id="delete">Удалить</button>
         </footer>
     </div>
 </div>
