--- a/views/index-content.hbs
+++ b/views/index-content.hbs
@@ -18,15 +18,15 @@
             </div>
         </div>
         <section class="lists">
-            <div class="left">
+            <div class="left" id="lists-left-panel">
                 <div class="text">Ваши друзья</div>
-                <div id="lists-left"> 
+                <div id="lists-left" class="drag-parent"> 
                     <!-- левый список -->
                 </div>
             </div>
-            <div class="right">
+            <div class="right" id="lists-right-panel">
                 <div class="text">Друзья в списке</div>
-                <div id="lists-right">
+                <div id="lists-right" class="drag-parent">
                     <!-- правый список -->
                 </div>    
             </div>
